--- a/package.json
+++ b/package.json
@@ -5,9 +5,15 @@
   "main": "index.js",
   "author": "Max Wang",
   "dependencies": {
+    "@babel/core": "^7.13.10",
+    "@babel/node": "^7.13.10",
+    "@babel/preset-env": "^7.13.10",
     "express": "^4.17.1"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon --exec babel-node index.js"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
