--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "helmet": "^4.4.1",
     "mongoose": "^5.12.2",
     "morgan": "^1.10.0",
