--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "autoprefixer": "^10.2.5",
     "babel-loader": "^8.2.2",
     "body-parser": "^1.19.0",
+    "connect-mongo": "^4.4.1",
     "cookie-parser": "^1.4.5",
     "css-loader": "^5.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "fs": "0.0.1-security",
     "helmet": "^4.4.1",
     "mini-css-extract-plugin": "^1.4.0",
