--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "multer": "^1.4.2",
     "node-sass": "^5.0.0",
     "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
     "passport-github": "^1.1.0",
+    "passport-kakao": "^1.0.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0",
     "postcss": "^8.2.9",
@@ -39,7 +41,8 @@
   "scripts": {
     "dev:server": "nodemon --exec babel-node init.js --delay 2 --ignore 'scss'",
     "dev:assets": "WEBPACK_ENV=development webpack -w",
-    "build:assets": "WEBPACK_ENV=production webpack"
+    "build:assets": "WEBPACK_ENV=production webpack",
+    "ngrok": "ngrok http 4000"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
