--- a/package.json
+++ b/package.json
@@ -45,6 +45,12 @@
     "ngrok": "ngrok http 4000"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "eslint": "^7.23.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "nodemon": "^2.0.7",
+    "prettier": "^2.2.1"
   }
 }
