#12.5 Building for Productions

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "author": "Max Wang",
   "dependencies": {
+    "@babel/cli": "^7.13.14",
     "@babel/core": "^7.13.10",
     "@babel/node": "^7.13.10",
     "@babel/polyfill": "^7.12.1",
@@ -43,10 +44,15 @@
     "webpack-cli": "^4.6.0"
   },
   "scripts": {
-    "dev:server": "nodemon --exec babel-node init.js --delay 2 --ignore '.scss' --ignore 'static'",
-    "dev:assets": "WEBPACK_ENV=development webpack -w",
-    "build:assets": "WEBPACK_ENV=production webpack",
-    "ngrok": "ngrok http 4000"
+    "dev:server": "nodemon --exec babel-node src/init.js --delay 2 --ignore '.scss' --ignore 'static'",
+    "dev:assets": " cd src && WEBPACK_ENV=development webpack -w",
+    "build:assets": " cd src && WEBPACK_ENV=production webpack",
+    "build:server": "babel src --out-dir build --ignore 'src/assets' --ignore 'src/static' --ignore 'src/webpack.config.js'",
+    "copyAll": "cp -R src/static build && cp -R src/views build",
+    "build": "npm run build:server && npm run build:assets && npm run copyAll",
+    "prebuild":"rm -rf build",
+    "ngrok": "ngrok http 4000",
+    "start" : "node build/init.js"
   },
   "devDependencies": {
     "eslint": "^7.23.0",
