--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "build": "npm run build:server && npm run build:assets && npm run copyAll",
     "prebuild":"rm -rf build",
     "ngrok": "ngrok http 4000",
-    "start" : "node build/init.js"
+    "start" : "node build/init.js",
+    "prestart": "npm run build"
   },
   "devDependencies": {
     "eslint": "^7.23.0",
