--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "css-loader": "^5.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-flash": "0.0.2",
     "express-session": "^1.17.1",
     "fs": "0.0.1-security",
     "get-blob-duration": "^1.2.0",
@@ -50,9 +51,9 @@
     "build:server": "babel src --out-dir build --ignore 'src/assets' --ignore 'src/static' --ignore 'src/webpack.config.js'",
     "copyAll": "cp -R src/static build && cp -R src/views build",
     "build": "npm run build:server && npm run build:assets && npm run copyAll",
-    "prebuild":"rm -rf build",
+    "prebuild": "rm -rf build",
     "ngrok": "ngrok http 4000",
-    "start" : "PRODUCTION=true node build/init.js",
+    "start": "PRODUCTION=true node build/init.js",
     "prestart": "npm run build"
   },
   "devDependencies": {
